Test and play blackjack with file
- Integration tests with file inputs
- Play.java to be able to run the blackjack game from commandline
- Make deck loaded from file mutable so that objects can be removed on demand
- Added testing tips on README.md